@startuml
package "UI Layer" {
    class LoginScreen {
        + onRegisterSubmit(username: String, password: String): void
        + onLoginSubmit(username: String, password: String): void
        + showMessage(message: String): void
    }

    class DashboardGUI {
        + displaySavedData(profile: UserProfile): void
        + selectGameMode(mode: String): void
    }
}

package "Logic Layer" {
    class AccountManager {
        + register(username: String, password: String): Boolean
        + login(username: String, password: String): UserProfile
    }
}

package "Data Layer" {
    class UserProfile {
        - userId: String
        - username: String
        - passwordHash: String
        - scores: int
        - rankings: int
        - campaignProgress: int
        + getSavedParties(): List<String>
    }

    interface IUserDB {
        + usernameExists(username: String): Boolean
        + save(user: UserProfile): void
        + findUsername(username: String): UserProfile
    }

    class SQLUserRepository {
        + usernameExists(username: String): Boolean
        + save(user: UserProfile): void
        + findUsername(username: String): UserProfile
    }

    interface IDBConnection {
        + openConnection(): void
        + executeQuery(sql: String): ResultSet
    }

    class DatabaseConnector {
        + openConnection(): void
        + executeQuery(sql: String): ResultSet
    }
}

' Relationships
LoginScreen ..> AccountManager : uses
AccountManager ..> IUserDB : uses
IUserDB <|.. SQLUserRepository : implements

SQLUserRepository ..> IDBConnection : uses
DatabaseConnector ..|> IDBConnection : implements

AccountManager ..> DashboardGUI : navigates to after login
DashboardGUI ..> UserProfile : displays

@enduml
